@@ -2,7 +2,6 @@
 #define Pds_StateSelect_hh
 
 #include "pds/utility/Appliance.hh"
-#include "pds/offlineclient/OfflineClient.hh"
 #include <QtGui/QGroupBox>
 
 class QPoint;
@@ -13,15 +12,13 @@ class QPalette;
 
 namespace Pds {
   class PartitionControl;
-  class MainWindow;
  
   class StateSelect : public QGroupBox,
 		      public Appliance {
     Q_OBJECT
   public:
-    StateSelect(MainWindow*,
-		PartitionControl&,
-        OfflineClient*);
+    StateSelect(QWidget*,
+		PartitionControl&);
     ~StateSelect();
   public:
     virtual Transition* transitions(Transition*);
@@ -35,12 +32,10 @@ namespace Pds {
     void selected(const QString&);
   private:
     PartitionControl& _control;
-    OfflineClient*    _offlineclient;
     QComboBox*        _select;
     QLabel*           _display;
     QPalette*         _green;
     QPalette*         _yellow;
-    MainWindow&       _w;
   };
 };
 
